z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -1454,16 +1454,11 @@ div.linksgroup div.site.hover a.del-site-btn{
 #broken-site {
 	height: 25px;
 }
-#broken-site .wrapper {
-    position: relative; 
-	z-index: 10; 
-	width: 100%;
-}
 
 #broken-site .wrapper {
-    position: relative; 
-    z-index: 10; 
-	color: #9db2cc; 
+    position: relative;
+    width: 100%;
+	color: #9db2cc;
 	font-size: 11px;
 }
 #broken-site .left-text {
